Fix layout issue

--- a/style.css
+++ b/style.css
@@ -277,7 +277,6 @@ section {
 .about-containers, 
 .about-details-container {
     display: flex;
-    flex-wrap: wrap;
 }
 
 .about-pic {
